--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Welcome</title>
+    <style>
+        body {
+            background: url("https://giphy.com/gifs/12Z8L2cDlOHQu4/html5");
+        }
+    
+    </style>
 
 </head>
 <body>
