--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Welcome</title>
     <style>
         body {
-            background: url("https://giphy.com/gifs/12Z8L2cDlOHQu4/html5");
+            background-image: url("https://giphy.com/gifs/12Z8L2cDlOHQu4/html5");
         }
     
     </style>
