--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <title>Welcome</title>
     <style>
-        body {
+        /* body {
             background-image: url("https://giphy.com/gifs/12Z8L2cDlOHQu4/html5");
+        } */
+        body {
+            background: red;
         }
     
     </style>
