--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <title>Welcome</title>
     <style>
-        /* body {
-            background-image: url("https://giphy.com/gifs/12Z8L2cDlOHQu4/html5");
-        } */
         body {
-            background: red;
+            background-image: url("https://media.giphy.com/media/12Z8L2cDlOHQu4/giphy.gif");
         }
+       
     
     </style>
 
